--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
 port = 5000
+
+MONGO_DB_URI = mongodb+srv://leulgedion0:lI6dav23xVevfKy1@cluster0.xuxjs.mongodb.net/?
+retryWrites=true&w=majority&appName=Cluster0
