--- a/.env
+++ b/.env
@@ -2,3 +2,5 @@ port = 5000
 
 MONGO_DB_URI = mongodb+srv://leulgedion0:lI6dav23xVevfKy1@cluster0.xuxjs.mongodb.net/?
 retryWrites=true&w=majority&appName=Cluster0
+JWT_SECRET = ZynqEvQqDtsmBJDfIaLpPYY7SijTgCr96+JF6/bt/DY=
+MODE_ENV = development
